[profile.release]
strip = true
lto = true

[workspace]
members = ["image_collection", "server", "simulation"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "^0.1"
env_logger = "^0.11"
tracing = "^0.1"
anyhow = "^1"
futures = "^0.3"
rand = "^0.8"
rand_distr = "^0.4"
clap = { version = "^4", features = ["derive"] }
crossbeam-queue = "^0.3"
serde = { version = "^1", features = ["derive"] }
simd-json = "0.13"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
actix-web = "4"
actix-files = "^0.6"
