[package]
name = "image_collection"
version = "0.2.2"
edition = "2021"

[lib]
doctest = false
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
crossbeam-queue = { workspace = true }
serde = { workspace = true }
simd-json = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
