[package]
name = "image_collection"
version.workspace = true
edition = "2024"

[lib]
doctest = false
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = "1"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
crossbeam-queue = { workspace = true }
serde = { workspace = true }
simd-json = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
