[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
actix-files = "0.6.0-beta.7"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
futures = "^0.3"
rand = "^0.8"
env_logger = "^0.9"
log = "^0.4"
anyhow = "^1"
image_collection =  {path = "../image_collection"}
