[package]
name = "server"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "^0.6"
clap = { version = "4", features = ["derive"] }
futures = "^0.3"
rand = "^0.8"
env_logger = "^0.11"
log = "^0.4"
anyhow = "^1"
image_collection = { path = "../image_collection" }
