[package]
name = "server"
version = "0.2.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-files = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
image_collection = { path = "../image_collection" }
