[package]
name = "simulation"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.0"
rand = "^0.8"
rand_distr = "^0.4"
env_logger = "^0.10"
log = "^0.4"
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
image_collection =  {path = "../image_collection"}

