[package]
name = "simulation"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "^0.8"
rand_distr = "^0.4"
env_logger = "^0.11"
log = "^0.4"
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
image_collection = { path = "../image_collection" }
