[package]
name = "simulation"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
image_collection = { path = "../image_collection" }
